--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 html, body { scroll-behavior: smooth; }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Anton', sans-serif;
   color: #f5f5f5;
   background-color: #0d0d0d;
   overflow-x : hidden;
@@ -27,7 +27,7 @@ header {
 
   header h1 {
     font-size: 16px;
-    color: #ffd36a;
+    color: #81904C;
     letter-spacing: 1px;
   }
 
@@ -40,7 +40,7 @@ header {
   }
 
   nav a:hover{
-    color : #ffd36a;
+    color : #81904C;
   }
 
   /*  HERO  */
@@ -71,28 +71,28 @@ header {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.4);
     z-index: 1;
   }
 
   .hero-content {
     position: relative;
     z-index: 2;
-    color: #fff;
+    color: #ffffff;
     max-width: 800px;
     padding: 20px;
   }
 
   .hero-content p {
     margin: 15px 0;
-    font-size: 1.1rem;
+    font-size: 1.5rem;
     line-height: 1.6;
   }
 
   .title {
-    font-size: 3rem;
+    font-size: 8rem;
     font-weight: 700;
-    color: #ffd36a;
+    color: #81904C;
   }
 
 
